--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -1,24 +1,54 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿<div>
+    <br />
+    <label>Введите App token</label><br />
+    <input type="text" id="AppToken" /> <br /><br />
+    <label>Введите User key</label><br />
+    <input type="text" id="UserKey" /><br /><br />
+    <label>Введите сообщение</label><br />
+    <input type="text" id="Message" /><br /><br />
+
+    @*<form action="api/values/5" method="post">
+            <input type="submit" value="Отправить" onclick="Button1_Click" />
+        </form>*@
+
+    <button id="btn">Сохранить</button>
+
+    @*<input type="button" id="btn" value="Отправить" />*@
+
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+@section scripts
+{
+    <script type="text/javascript">
+
+            
+
+            $(document).ready(function () {
+
+                $("#btn").click(function (event) {
+                    event.preventDefault();
+                    Send();
+                });
+
+            });
+
+        function Send() {
+            // получаем значения для добавляемой книги
+            var request = {
+                AppToken: $('#AppToken').val(),
+                UserKey: $('#UserKey').val(),
+                Message: $('#Message').val()
+            };
+
+            $.ajax({
+                url: '/api/values/',
+                type: 'POST',
+                data: JSON.stringify(request),
+                contentType: "application/json;charset=utf-8"         
+            });
+        }
+
+        
+
+    </script>
+}
