--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <input type="submit" value="Отправить" onclick="Button1_Click" />
         </form>*@
 
-    <button id="btn">Сохранить</button>
+    <button id="btn">Отправить</button>
 
     @*<input type="button" id="btn" value="Отправить" />*@
 
@@ -20,8 +20,6 @@
 @section scripts
 {
     <script type="text/javascript">
-
-            
 
             $(document).ready(function () {
 
@@ -48,7 +46,10 @@
             });
         }
 
-        
+        function notification(string mes) {
+            <br />
+                <label>mes</label> <br />
+        }
 
     </script>
 }
